# Fwogisms

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  FwogismsApplication.cpp  Main.cpp
src/Include/Fwogisms/: Application.hpp  FwogismsApplication.hpp
